Migrate resource to asset

--- a/ckanext/cloudstorage/templates/page.html
+++ b/ckanext/cloudstorage/templates/page.html
@@ -2,6 +2,6 @@
 
 {% block scripts %}
     {{ super() }}
-    {% resource 'cloudstorage-js/main' %}
+    {% asset 'cloudstorage-js/main' %}
 
 {% endblock %}
